# kdesdk-kioslaves

./: .kde-ci.yml  CMakeLists.txt  Makefile.am
kio_perldoc/: CMakeLists.txt  perldoc.cpp
perldoc/: CHANGES  CMakeLists.txt  Messages.sh  README  kio_perldoc.css  perldoc.cpp  perldoc.h  perldoc.json  perldoc.protocol  pod2html.pl
svn/: CMakeLists.txt  Makefile.am  Messages.sh  README  configure.in.bot  configure.in.in  svn+file.protocol  svn+http.protocol  svn+https.protocol  svn+ssh.protocol  svn.cpp  svn.h  svn.protocol
svn/icons/: CMakeLists.txt  crsc-action-svn_add.svgz  crsc-action-svn_branch.svgz  crsc-action-svn_merge.svgz  crsc-action-svn_remove.svgz  crsc-action-svn_status.svgz  crsc-action-svn_switch.svgz
svn/ksvnd/: CMakeLists.txt  Makefile.am  commitdlg.ui  commitdlg.ui.h  ksvnd.cpp  ksvnd.desktop  ksvnd.h  org.kde.ksvnd.xml
svn/svnhelper/: CMakeLists.txt  Makefile.am  apply_patch.desktop  kio_svn_helper.cpp  kio_svn_helper.h  subversion.desktop  subversion_toplevel.desktop  subversioncheckout.ui  subversiondiff.ui  subversionlog.ui  subversionswitch.ui
